src/components/sidemenu/SideMenu.css
.side-menu-wrapper {
    position: relative;
}

.side-menu {
    border-left: 2px solid #444;
    padding: 1em;
    position: fixed;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: #141414;
    z-index: 2000;
    width: max-content;
    transition: transform 0.3s ease-in-out;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.side-menu h3 {
    margin: 0;
}

.side-menu.closed {
    transform: translateX(100%);
}

.layers-menu ul {
    list-style-type: none;
    padding-inline-start: 0;
    margin-block-end: 0;
}

.layers-menu input {
    margin-right: 0.5em;
}

.track-color-mode-select {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 1em;
}

.distance-meter-button button,
.scenery-info-button button {
    width: 100%;
}

.info-footer {
    color: #888;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    margin-top: auto;
    align-items: flex-end;
}

